[gd_scene load_steps=2 format=3 uid="uid://b7r0nuutr0lmw"]

[ext_resource type="Script" path="res://scenes/scripts/marketplace.gd" id="1_bwj2v"]

[node name="Marketplace" type="TabBar"]
size_flags_horizontal = 0
script = ExtResource("1_bwj2v")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Refresh"

[node name="GoldLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0 G"

[node name="MarketplaceGridContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
